--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "express": "^4.14.0",
     "method-override": "^3.0.0",
     "sanitizer": "^0.1.3"
+    "coverage": "./node_modules/.bin/nyc -r cobertura -r text-summary -r html npm text",
+    "coverage-lcov": "./node_modules/.bin/nyc -r cobertura -r text-summary -r lcov npm test"
   },
   "scripts": {
     "start": "node app.js",
